--- a/css/estilo.css
+++ b/css/estilo.css
@@ -152,6 +152,127 @@ section.mapa{
 	margin-left: 5vw;
 }
 section.mapa iframe{
-	width: 90%;
+	width: 80%;
+	height: 95%;
+}
+section.verde{
+	width: 90vw;
+	height: 10vh;
+	background-color: green;
+	margin-left: 5vw;
+}
+section.verde h1{
+	color: white;
+}
+section.laranja{
+	width: 90vw;
+	margin-left: 5vw;
+	height: 60vh;
+	margin-top:3vh;
+	background-color: orange;
+}
+#azulzinha{
+	width: 50%;
 	height: 100%;
+	background-color: cyan;
+}
+#azul{
+	width: 50%;
+	height: 100%;
+	background-color: darkblue;
+	flex-direction: column;
+}
+#amarela{
+	width: 100%;
+	height: 50%;
+	background-color: yellow;
+	flex-direction: row;
+}
+#vermelha{
+	width: 100%;
+	height: 50%;
+	background-color: red;
+	flex-direction: column;
+	text-align: center;
+	justify-content: center;
+	display: flex;
+}
+#roxa{
+	width: 50%;
+	height: 100%;
+	background-color: purple;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+}
+#rosa{
+	width: 50%;
+	height: 100%;
+	background-color: pink;
+}
+section.preta{
+	width: 90vw;
+	height: 10vh;
+	margin-left: 5vw;
+	margin-top: 3vh;
+	background-color: black;
+}
+section.preta div a{
+	color: white;
+	font-family: " trebuchet",cursive;
+}
+#roxa img{
+	width: 80%;
+	height: 80%;
+}
+section.video{
+	width: 90vw;
+	height: 80vh;
+	margin-left: 5vw;
+	
+}
+#vid{
+	width: 50%;
+	height: 100%;
+	background-color: rgb(255, 255, 255,0.5);
+	border: 2px solid black;
+}
+#Texto1{
+	width: 50%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	display: flex;
+	background-color: rgb(255,255,255, 0.5);
+	border: 2px solid black;
+}
+#Texto1 div{
+	margin-top: 3%;
+
+}
+#Texto1 div p{
+	 font-family: "Bebas Neue", sans-serif;
+	 font-size:1.5vw;
+	 color: black;
+}
+#vid video{
+	width: 90%;
+	height: 90%;
+}
+section.video p{
+	 font-family: "Bebas Neue", sans-serif;
+	 font-size: 1.5vw;
+	 color: black;
+
+
+}
+#cor{
+	color: black;
+}
+section.titulo div a{
+	 font-family: "Bebas Neue", sans-serif;
+	 font-size: 1.5vw;
+	 color: black;
 }
